src/components/HeroSection/HeroSection.scss
.hero-section {
  margin-top: 4rem;
  align-items: center;
  text-align: center;
  transition: all 0.3s;

  @media screen and (max-width: 960px) {
    margin-top: 3rem;
  }
}

.hero__container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hero__intro {
  display: flex;
  flex-direction: column;

  > p {
    font-size: 1.8rem;
    font-weight: 200;

    @media screen and (max-width: 960px) {
      font-size: 1.5rem;
    }
  }

  > h1 {
    padding: 1rem 10vw;
    font-size: 6rem;
    font-weight: 800;
    line-height: 100px;

    @media screen and (max-width: 960px) {
      font-size: 4rem;
      line-height: 80px;
      padding: 1rem;
    }
  }

  .hero__color {
    font-weight: 800;
    color: transparent;
    background: linear-gradient(to right, #9500ff 20%, #daa7ff 100%);
    background-clip: text;
  }

  .hero__intro-type {
    font-size: 3vh;
    display: flex;
    justify-content: center;
    gap: 10px;
    margin-top: 2rem;
    font-weight: 800;

    @media screen and (max-width: 960px) {
      margin-top: 1rem;
    }
  }

  .hero__short-intro {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 0.5rem;

    > p {
      padding-top: 0.2rem;
      color: #4e4e4e;
      width: 50%;
      text-align: center;
    }

    @media screen and (max-width: 960px) {
      > p {
        width: 80%;
        font-size: 0.9rem;
      }
    }
  }
}

.hero__CTA {
  .hero__CTA-button-link > button {
    margin-top: 4rem;
    background-color: #cc84ff;
    padding: 20px 40px;
    border-radius: 10px;
    font-size: 20px;
    font-weight: 500;
    cursor: pointer;
    border: none;
    color: #121212;

    @media screen and (max-width: 960px) {
      margin-top: 2rem;
      font-size: 14px;
    }
  }

  .hero__CTA-button-link > button:hover {
    transition: 0.3s;
    background-color: #edd5ff;
    color: #911ae5;
  }
}

